# knap

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
knap/: __init__.py  __main__.py  cli.py  config.py  main.py
knap/agent/: __init__.py  core.py  planning.py  prompts.py  tasks.py
knap/indexer/: __init__.py  scanner.py  summarizer.py  summary.py
knap/processors/: __init__.py  base.py  csv_processor.py  image_processor.py  pdf_processor.py
knap/storage/: __init__.py  history.py  plans.py  settings.py  vault_index.py
knap/telegram/: bot.py
knap/tools/: __init__.py  base.py  daily.py  edit.py  frontmatter.py  glob.py  index.py  navigate.py  read.py  settings.py  tasks.py  web.py  write.py
tests/: __init__.py  conftest.py  test_agent.py  test_config.py  test_indexer.py  test_storage.py  test_tools.py
